# CR_ROS

./: LICENSE  README-CN.md  README.md
cr10_moveit/: package.xml
cr10_moveit/config/: ros_controllers.yaml
cr10_moveit/launch/: cr10_moveit.launch  demo.launch  demo_gazebo.launch  gazebo.launch
cr16_moveit/: package.xml
cr16_moveit/launch/: cr16_moveit.launch  demo.launch  demo_gazebo.launch  gazebo.launch
cr5_moveit/: CMakeLists.txt
cr5_moveit/config/: ompl_planning.yaml
cr5_moveit/launch/: cr5_moveit.launch
cr5_moveit/scripts/: move_it.py
dobot_bringup/: CMakeLists.txt
dobot_bringup/include/dobot_bringup/: commander.h  cr5_robot.h
dobot_bringup/launch/: bringup.launch
dobot_bringup/src/: cr5_robot.cpp  main.cpp  tcp_socket.cpp
dobot_bringup/srv/: ModbusCreate.srv  OpenGripper.srv  SetHoldRegs.srv
dobot_description/meshes/eef/: AG-95 GRIPPER v0.stl
dobot_description/urdf/: bunker.urdf  cr5_robot.urdf  robot.urdf
